[gd_scene load_steps=6 format=3 uid="uid://d3l852vwott67"]

[ext_resource type="Script" uid="uid://bimtg5drybg0k" path="res://ui/upgrades_ui/research_panel.gd" id="1_ah4ld"]
[ext_resource type="Theme" uid="uid://bna4ktuogxibk" path="res://ui/panel_theme_sharp_dark.tres" id="1_x62s4"]
[ext_resource type="PackedScene" uid="uid://ded5uildb1nb5" path="res://ui/upgrades_ui/resource_research_button.tscn" id="2_am4et"]
[ext_resource type="LabelSettings" uid="uid://b0u07fspob1bq" path="res://ui/label_settings.tres" id="4_vil55"]
[ext_resource type="Theme" uid="uid://bdilnrdo5nnri" path="res://ui/panel_theme_rounded_light.tres" id="5_jd0ws"]

[node name="ResearchPanel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ah4ld")
resource_button_scene = ExtResource("2_am4et")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme = ExtResource("1_x62s4")

[node name="ResourceButtonsVBox" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResourceResearchButton" parent="Panel/ResourceButtonsVBox" instance=ExtResource("2_am4et")]
layout_mode = 2

[node name="Panel2" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
layout_mode = 2

[node name="ResearchLabel" type="Label" parent="Panel2/VBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "todo"
label_settings = ExtResource("4_vil55")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResearchButton" type="Button" parent="Panel2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_jd0ws")
text = "Research"
